# churchsuite-utilities

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  renovate.json
.github/workflows/: codeql.yml  test.yml
src/churchsuite/: __init__.py  events.py
tests/: churchsuite_response.json  test_account.py  test_events.py
