[tool.poetry]
name = "churchsuite"
version = "0.1.0"
description = "A Python package for consuming the ChurchSuite API"
authors = ["St Mary's Church, Whitkirk <tech@whitkirkchurch.org.uk>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10.5"
pytz = "^2025.1"
requests = "^2.28.2"

[tool.poetry.dev-dependencies]
pytest = "8.3.5"
freezegun = "1.5.1"
coverage = "7.8.1"
requests-mock = "1.12.1"

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
