[tool.poetry]
name = "churchsuite"
version = "0.1.0"
description = "A Python package for consuming the ChurchSuite API"
authors = ["St Mary's Church, Whitkirk <tech@whitkirkchurch.org.uk>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.14.4"
pytz = "2025.2"
requests = "2.33.1"

[tool.poetry.group.dev.dependencies]
pytest = "9.0.3"
freezegun = "1.5.5"
coverage = "7.13.5"
requests-mock = "1.12.1"

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]

[build-system]
requires = ["poetry-core==2.4.0"]
build-backend = "poetry.core.masonry.api"
